changed global css bg color to avoid color clipping on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,7 @@
 :root {
-  --background: #ffffff;
+  --background: #F7E7CE;
   --foreground: #171717;
+ 
 }
 
 @font-face {
@@ -23,7 +24,7 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
-    --foreground: #ededed;
+    --foreground: #F7E7CE;
   }
 }
 
